# web1

./: README.md  manage.py  pyproject.toml
api/: authentication.py  models.py  serializers.py  urls.py  views.py
bot_flask/: main.py  token
djangoProject/: settings.py  urls.py
homepage/: urls.py
my_first_web/: admin.py  apps.py  models.py  urls.py  views.py
my_first_web/migrations/: 0001_initial.py
my_first_web/templates/: base.html  courses.html
templates/: base.html  homepage.html
templates/my_first_web/: courses.html  single_course.html
